src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~@angular/material/prebuilt-themes/indigo-pink.css";
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
body{
    background:rgba(0,0,0,.14);
    font-family: 'Ubuntu', sans-serif !important;
}

body, html{
    height:100%;
  }

